Creato Studio crypto + diversi aggiornamenti

--- a/Trading multi-asset.ipynb
+++ b/Trading multi-asset.ipynb
@@ -15,252 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Timestamp</th>\n",
-       "      <th>Price</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2014-09-17</td>\n",
-       "      <td>355.957367</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2014-09-18</td>\n",
-       "      <td>328.539368</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2014-09-19</td>\n",
-       "      <td>307.761139</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2014-09-20</td>\n",
-       "      <td>318.758972</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2014-09-21</td>\n",
-       "      <td>310.632446</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3503</th>\n",
-       "      <td>2024-04-20</td>\n",
-       "      <td>59876.710938</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3504</th>\n",
-       "      <td>2024-04-21</td>\n",
-       "      <td>60956.074219</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3505</th>\n",
-       "      <td>2024-04-22</td>\n",
-       "      <td>60919.242188</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3506</th>\n",
-       "      <td>2024-04-23</td>\n",
-       "      <td>62729.296875</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3507</th>\n",
-       "      <td>2024-04-24</td>\n",
-       "      <td>62048.164062</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>3508 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      Timestamp         Price\n",
-       "0    2014-09-17    355.957367\n",
-       "1    2014-09-18    328.539368\n",
-       "2    2014-09-19    307.761139\n",
-       "3    2014-09-20    318.758972\n",
-       "4    2014-09-21    310.632446\n",
-       "...         ...           ...\n",
-       "3503 2024-04-20  59876.710938\n",
-       "3504 2024-04-21  60956.074219\n",
-       "3505 2024-04-22  60919.242188\n",
-       "3506 2024-04-23  62729.296875\n",
-       "3507 2024-04-24  62048.164062\n",
-       "\n",
-       "[3508 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dati = pd.read_csv('Bitcoin (€) da yfinance dal 17-09-2014 al 24-04-2024.csv')\n",
-    "dati = dati[['Date', 'Close']]\n",
-    "dati = dati.rename(columns = {'Date':'Timestamp', 'Close': 'Price'})\n",
-    "dati['Timestamp'] = pd.to_datetime(dati['Timestamp'])\n",
-    "dati['Timestamp'] = dati['Timestamp'].dt.strftime('%Y-%m-%d')\n",
-    "dati['Timestamp'] = pd.to_datetime(dati['Timestamp'], format='%Y-%m-%d')\n",
-    "dati"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Timestamp</th>\n",
-       "      <th>Price</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2021-02-01</td>\n",
-       "      <td>27790.582031</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2021-02-02</td>\n",
-       "      <td>29501.521484</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2021-02-03</td>\n",
-       "      <td>31119.447266</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2021-02-04</td>\n",
-       "      <td>30859.554688</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2021-02-05</td>\n",
-       "      <td>31658.248047</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>146</th>\n",
-       "      <td>2021-06-27</td>\n",
-       "      <td>29013.742188</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>147</th>\n",
-       "      <td>2021-06-28</td>\n",
-       "      <td>28866.302734</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>148</th>\n",
-       "      <td>2021-06-29</td>\n",
-       "      <td>30139.980469</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>149</th>\n",
-       "      <td>2021-06-30</td>\n",
-       "      <td>29555.054688</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>150</th>\n",
-       "      <td>2021-07-01</td>\n",
-       "      <td>28341.414062</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>151 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     Timestamp         Price\n",
-       "0   2021-02-01  27790.582031\n",
-       "1   2021-02-02  29501.521484\n",
-       "2   2021-02-03  31119.447266\n",
-       "3   2021-02-04  30859.554688\n",
-       "4   2021-02-05  31658.248047\n",
-       "..         ...           ...\n",
-       "146 2021-06-27  29013.742188\n",
-       "147 2021-06-28  28866.302734\n",
-       "148 2021-06-29  30139.980469\n",
-       "149 2021-06-30  29555.054688\n",
-       "150 2021-07-01  28341.414062\n",
-       "\n",
-       "[151 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data_inizio = '2021-02-01'\n",
-    "data_fine = '2021-07-01'\n",
-    "indice_inizio = dati[dati['Timestamp'] == data_inizio].index[0]\n",
-    "indice_fine = dati[dati['Timestamp'] == data_fine].index[0]\n",
-    "dati = dati[indice_inizio:indice_fine + 1].reset_index(drop=True)\n",
-    "dati"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +38,7 @@
     "        if pair not in exchange.markets:\n",
     "            raise ValueError(f\"Il mercato {pair} non è disponibile su Binance.\")\n",
     "\n",
-    "        print(f\"Scarico i dati per {pair} da {start_date} a {end_date}...\")\n",
+    "        print(f\"Scarico i dati per {pair} dal {start_date} al {end_date}...\")\n",
     "        \n",
     "        ohlcv = []\n",
     "        since = start_timestamp\n",
