Aggiornata Grid search generica con funzione custom e, Strategia doppio TS e target garanzia

--- a/Studio crypto di un exchange.ipynb
+++ b/Studio crypto di un exchange.ipynb
@@ -3817,14 +3817,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from scipy.stats import percentileofscore\n",
-    "\n",
     "def analyze_crypto_prices(crypto_prices, start_date, end_date):\n",
     "    # Filtra il periodo selezionato\n",
     "    filtered_data = crypto_prices.loc[start_date:end_date]\n",
@@ -3921,17 +3917,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "def analyze_correlations(filtered_data):\n",
+    "    # Calcola la matrice di correlazione\n",
     "    correlation_matrix = filtered_data.corr()\n",
+    "    \n",
+    "    # Trasforma la matrice in un Series con coppie come indice\n",
+    "    correlation_pairs = correlation_matrix.unstack()\n",
+    "\n",
+    "    # Rimuovi duplicati e auto-correlazioni (crypto con se stessa)\n",
+    "    correlation_pairs = correlation_pairs[correlation_pairs.index.get_level_values(0) != correlation_pairs.index.get_level_values(1)]\n",
+    "\n",
     "    # Trova le coppie di crypto più e meno correlate\n",
-    "    correlation_pairs = correlation_matrix.unstack().drop_duplicates()\n",
     "    most_correlated = correlation_pairs.idxmax()\n",
     "    least_correlated = correlation_pairs.idxmin()\n",
-    "    \n",
+    "\n",
     "    # Correlazione media per crypto\n",
     "    mean_correlations = correlation_matrix.mean()\n",
     "\n",
@@ -3947,7 +3950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3983,7 +3986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -4552,7 +4555,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Cripto più correlate: ('BTC', 'BTC')\n",
+      "Cripto più correlate: ('ETH', 'SOL')\n",
       "Cripto meno correlate: ('SOL', 'LINK')\n",
       "\n",
       "Correlazione media per crypto:\n"
