--- a/Calcolatore plusvalenze.ipynb
+++ b/Calcolatore plusvalenze.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,25 +98,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Totale plusvalenze generate per BTC-EUR: 249.36\n",
+      "Totale plusvalenze generate per BTC-EUR: 473.14\n",
       "Totale plusvalenze generate per RNDR/RENDER-EUR: 19.77\n",
-      "Totale plusvalenze generate per LINK-EUR: 0.18\n",
+      "Totale plusvalenze generate per LINK-EUR: 83.5\n",
       "Totale plusvalenze generate per SEI-EUR: 0.55\n",
       "Totale plusvalenze generate per TIA-EUR: 1.22\n",
       "Totale plusvalenze generate per IMX-EUR: 1.21\n",
       "Totale plusvalenze generate per FET-EUR: 8.08\n",
       "Totale plusvalenze generate per ETH-EUR: 0\n",
       "Totale plusvalenze generate per USDC-EUR: 0\n",
+      "Totale plusvalenze generate per TAO-EUR: 0\n",
       "Totale plusvalenze generate per FET-USDC: 0\n",
       "\n",
-      "Totale plusvalenze generate in EUR: 280.36\n",
+      "Totale plusvalenze generate in EUR: 587.47\n",
       "Totale plusvalenze generate in USDC: 0\n"
      ]
     }
@@ -183,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -361,6 +362,90 @@
        "      <td>2024-11-17T10:01:08.357Z</td>\n",
        "      <td>160.79</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>82</th>\n",
+       "      <td>62005529</td>\n",
+       "      <td>BTC</td>\n",
+       "      <td>EUR</td>\n",
+       "      <td>19.239434</td>\n",
+       "      <td>0.00021</td>\n",
+       "      <td>91616.35</td>\n",
+       "      <td>0.057718</td>\n",
+       "      <td>EUR</td>\n",
+       "      <td>SELL</td>\n",
+       "      <td>2024-11-24T16:25:47.87Z</td>\n",
+       "      <td>8.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>83</th>\n",
+       "      <td>62005530</td>\n",
+       "      <td>BTC</td>\n",
+       "      <td>EUR</td>\n",
+       "      <td>76.880849</td>\n",
+       "      <td>0.00084</td>\n",
+       "      <td>91524.82</td>\n",
+       "      <td>0.230643</td>\n",
+       "      <td>EUR</td>\n",
+       "      <td>SELL</td>\n",
+       "      <td>2024-11-24T16:25:47.87Z</td>\n",
+       "      <td>32.90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>84</th>\n",
+       "      <td>62005531</td>\n",
+       "      <td>BTC</td>\n",
+       "      <td>EUR</td>\n",
+       "      <td>234.253414</td>\n",
+       "      <td>0.00256</td>\n",
+       "      <td>91505.24</td>\n",
+       "      <td>0.702760</td>\n",
+       "      <td>EUR</td>\n",
+       "      <td>SELL</td>\n",
+       "      <td>2024-11-24T16:25:47.87Z</td>\n",
+       "      <td>94.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85</th>\n",
+       "      <td>62056525</td>\n",
+       "      <td>BTC</td>\n",
+       "      <td>EUR</td>\n",
+       "      <td>19.255402</td>\n",
+       "      <td>0.00021</td>\n",
+       "      <td>91692.39</td>\n",
+       "      <td>0.057766</td>\n",
+       "      <td>EUR</td>\n",
+       "      <td>SELL</td>\n",
+       "      <td>2024-12-01T16:26:48.283Z</td>\n",
+       "      <td>6.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>86</th>\n",
+       "      <td>62056526</td>\n",
+       "      <td>BTC</td>\n",
+       "      <td>EUR</td>\n",
+       "      <td>76.944664</td>\n",
+       "      <td>0.00084</td>\n",
+       "      <td>91600.79</td>\n",
+       "      <td>0.230834</td>\n",
+       "      <td>EUR</td>\n",
+       "      <td>SELL</td>\n",
+       "      <td>2024-12-01T16:26:48.283Z</td>\n",
+       "      <td>28.70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>87</th>\n",
+       "      <td>62056527</td>\n",
+       "      <td>BTC</td>\n",
+       "      <td>EUR</td>\n",
+       "      <td>135.535588</td>\n",
+       "      <td>0.00148</td>\n",
+       "      <td>91578.10</td>\n",
+       "      <td>0.406607</td>\n",
+       "      <td>EUR</td>\n",
+       "      <td>SELL</td>\n",
+       "      <td>2024-12-01T16:26:48.283Z</td>\n",
+       "      <td>53.65</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -377,6 +462,12 @@
        "79  61884502  BTC   EUR  208.218720  0.00278  74898.82   0.624656   \n",
        "80  61947845  BTC   EUR   49.951485  0.00058  86123.25   0.149854   \n",
        "81  61947846  BTC   EUR  418.054041  0.00486  86019.35   1.254162   \n",
+       "82  62005529  BTC   EUR   19.239434  0.00021  91616.35   0.057718   \n",
+       "83  62005530  BTC   EUR   76.880849  0.00084  91524.82   0.230643   \n",
+       "84  62005531  BTC   EUR  234.253414  0.00256  91505.24   0.702760   \n",
+       "85  62056525  BTC   EUR   19.255402  0.00021  91692.39   0.057766   \n",
+       "86  62056526  BTC   EUR   76.944664  0.00084  91600.79   0.230834   \n",
+       "87  62056527  BTC   EUR  135.535588  0.00148  91578.10   0.406607   \n",
        "\n",
        "   brokerage_currency  side                      date  Plusvalenze  \n",
        "54                EUR  SELL  2024-05-19T13:03:37.617Z         0.66  \n",
@@ -388,10 +479,16 @@
        "78                EUR  SELL  2024-11-10T18:08:27.963Z         3.01  \n",
        "79                EUR  SELL  2024-11-10T18:08:27.963Z        54.53  \n",
        "80                EUR  SELL  2024-11-17T10:01:08.357Z        20.49  \n",
-       "81                EUR  SELL  2024-11-17T10:01:08.357Z       160.79  "
+       "81                EUR  SELL  2024-11-17T10:01:08.357Z       160.79  \n",
+       "82                EUR  SELL   2024-11-24T16:25:47.87Z         8.00  \n",
+       "83                EUR  SELL   2024-11-24T16:25:47.87Z        32.90  \n",
+       "84                EUR  SELL   2024-11-24T16:25:47.87Z        94.50  \n",
+       "85                EUR  SELL  2024-12-01T16:26:48.283Z         6.03  \n",
+       "86                EUR  SELL  2024-12-01T16:26:48.283Z        28.70  \n",
+       "87                EUR  SELL  2024-12-01T16:26:48.283Z        53.65  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
