--- a/Grid search generica.ipynb
+++ b/Grid search generica.ipynb
@@ -3123,16 +3123,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1000,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "trailing_buy_pct_values = [0.01]\n",
-    "first_buy_pct_values = [0.01]\n",
-    "fake_stop_loss_pct_values = [0.01]\n",
-    "trailing_sell_pct_values = [0.001, 0.01]\n",
+    "trailing_buy_pct_values = [0.005, 0.01]\n",
+    "first_buy_pct_values = [0.005, 0.01]\n",
+    "fake_stop_loss_pct_values = [0.005, 0.01]\n",
+    "trailing_sell_pct_values = [0.001, 0.005, 0.01]\n",
     "do_buy_values = [True, False]\n",
-    "A_a_values = [0.001, 0.01, 0.2]\n",
+    "A_a_values = [0.001, 0.005, 0.01, 0.2]\n",
     "B_a_values = [10, 100, 500, 1000]\n",
     "\n",
     "lista_values = [trailing_buy_pct_values, first_buy_pct_values, fake_stop_loss_pct_values, trailing_sell_pct_values, do_buy_values, A_a_values, B_a_values]"
