Aggiunti prototipi di function ad API Bybit

--- a/API Bybit.ipynb
+++ b/API Bybit.ipynb
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,145 @@
     "CHAT_ID = cab.id_chat_mio_gruppo\n",
     "MESSAGGIO = 'Messaggio di prova'\n",
     "\n",
-    "invia_messaggio_telegram(TOKEN, CHAT_ID, MESSAGGIO)"
+    "# invia_messaggio_telegram(TOKEN, CHAT_ID, MESSAGGIO)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def buy_crypto(symbol, amount, api_key, api_secret):\n",
+    "    exchange = ccxt.bybit({\n",
+    "        'apiKey': api_key,\n",
+    "        'secret': api_secret,\n",
+    "        'enableRateLimit': True,\n",
+    "    })\n",
+    "    exchange.set_sandbox_mode(False)  # Imposta a True per il testnet\n",
+    "    exchange.load_markets()\n",
+    "    order = exchange.create_market_buy_order(symbol, amount)\n",
+    "    return order"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sell_crypto(symbol, amount, api_key, api_secret):\n",
+    "    exchange = ccxt.bybit({\n",
+    "        'apiKey': api_key,\n",
+    "        'secret': api_secret,\n",
+    "        'enableRateLimit': True,\n",
+    "    })\n",
+    "    exchange.set_sandbox_mode(False)\n",
+    "    exchange.load_markets()\n",
+    "    order = exchange.create_market_sell_order(symbol, amount)\n",
+    "    return order"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def set_trailing_stop(symbol, side, amount, trailing_stop, api_key, api_secret):\n",
+    "    exchange = ccxt.bybit({\n",
+    "        'apiKey': api_key,\n",
+    "        'secret': api_secret,\n",
+    "        'enableRateLimit': True,\n",
+    "    })\n",
+    "    exchange.set_sandbox_mode(False)\n",
+    "    exchange.load_markets()\n",
+    "    params = {\n",
+    "        'stop_loss': trailing_stop,\n",
+    "    }\n",
+    "    order = exchange.create_order(symbol, 'market', side, amount, None, params)\n",
+    "    return order"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_average_buy_price(symbol, api_key, api_secret):\n",
+    "    exchange = ccxt.bybit({\n",
+    "        'apiKey': api_key,\n",
+    "        'secret': api_secret,\n",
+    "        'enableRateLimit': True,\n",
+    "    })\n",
+    "    exchange.set_sandbox_mode(False)\n",
+    "    exchange.load_markets()\n",
+    "    orders = exchange.fetch_closed_orders(symbol)\n",
+    "    total_cost = 0\n",
+    "    total_amount = 0\n",
+    "    for order in orders:\n",
+    "        if order['side'] == 'buy':\n",
+    "            total_cost += order['cost']\n",
+    "            total_amount += order['filled']\n",
+    "    if total_amount > 0:\n",
+    "        return total_cost / total_amount\n",
+    "    else:\n",
+    "        return 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cancel_trailing_stop_orders(symbol, api_key, api_secret):\n",
+    "    exchange = ccxt.bybit({\n",
+    "        'apiKey': api_key,\n",
+    "        'secret': api_secret,\n",
+    "        'enableRateLimit': True,\n",
+    "    })\n",
+    "    exchange.set_sandbox_mode(False)\n",
+    "    exchange.load_markets()\n",
+    "    orders = exchange.fetch_open_orders(symbol)\n",
+    "    for order in orders:\n",
+    "        if 'trailing' in order['info']:\n",
+    "            exchange.cancel_order(order['id'], symbol)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_available_usdt(api_key, api_secret):\n",
+    "    exchange = ccxt.bybit({\n",
+    "        'apiKey': api_key,\n",
+    "        'secret': api_secret,\n",
+    "        'enableRateLimit': True,\n",
+    "    })\n",
+    "    exchange.set_sandbox_mode(False)\n",
+    "    balance = exchange.fetch_balance()\n",
+    "    return balance['USDT']['free']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def execute_trade():\n",
+    "    try:\n",
+    "        # Esegui operazioni di trading\n",
+    "        order = buy_crypto('BTC/USDT', 0.01, cab.api_key, cab.api_secret)\n",
+    "        # Altre operazioni...\n",
+    "    except Exception as e:\n",
+    "        error_message = f\"Errore durante l'esecuzione del trade: {str(e)}\"\n",
+    "        message = 'Errore incontrato'\n",
+    "        invia_messaggio_telegram(TOKEN, CHAT_ID, message)"
    ]
   }
  ],
