--- a/API Bybit.ipynb
+++ b/API Bybit.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,8 @@
    "source": [
     "# Inizializza il bot di Telegram\n",
     "telegram_bot = Bot(token=cab.token_telegram)\n",
-    "chat_id = cab.id_chat_mio_gruppo  # ID della chat o del canale Telegram"
+    "TOKEN_TELEGRAM = cab.token_telegram\n",
+    "CHAT_ID_TELEGRAM = cab.id_chat_mio_gruppo"
    ]
   },
   {
@@ -33,19 +34,19 @@
      "output_type": "stream",
      "text": [
       "Saldo di USDT nell'account spot:\n",
-      "  Disponibile: 70.60821679\n",
+      "  Disponibile: 488.56667721\n",
       "  In uso: 0.0\n",
-      "  Totale: 70.60821679\n",
+      "  Totale: 488.56667721\n",
       "\n",
       "Saldo di USDT nell'account funding:\n",
-      "  Disponibile: 0.7349\n",
+      "  Disponibile: 1.0172\n",
       "  In uso: 0.0\n",
-      "  Totale: 0.7349\n",
+      "  Totale: 1.0172\n",
       "\n",
       "Saldo di USDT nell'account unified:\n",
-      "  Disponibile: 70.60821679\n",
+      "  Disponibile: 488.56667721\n",
       "  In uso: 0.0\n",
-      "  Totale: 70.60821679\n",
+      "  Totale: 488.56667721\n",
       "\n"
      ]
     }
@@ -100,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,17 +119,12 @@
     "    except Exception as e:\n",
     "        print(f\"Errore nell'invio del messaggio Telegram: {e}\")\n",
     "\n",
-    "# Esempio di utilizzo\n",
-    "TOKEN = cab.token_telegram\n",
-    "CHAT_ID = cab.id_chat_mio_gruppo\n",
-    "MESSAGGIO = 'Messaggio di prova'\n",
-    "\n",
     "# invia_messaggio_telegram(TOKEN, CHAT_ID, MESSAGGIO)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,8 +256,16 @@
     "        # Altre operazioni...\n",
     "    except Exception as e:\n",
     "        error_message = f\"Errore durante l'esecuzione del trade: {str(e)}\"\n",
-    "        message = 'Errore incontrato'\n",
-    "        invia_messaggio_telegram(TOKEN, CHAT_ID, message)"
+    "        invia_messaggio_telegram(TOKEN_TELEGRAM, CHAT_ID_TELEGRAM, error_message)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# invia_messaggio_telegram(TOKEN_TELEGRAM, CHAT_ID_TELEGRAM, 'Altra prova')"
    ]
   }
  ],
