--- a/API Bybit.ipynb
+++ b/API Bybit.ipynb
@@ -267,6 +267,71 @@
    "source": [
     "# invia_messaggio_telegram(TOKEN_TELEGRAM, CHAT_ID_TELEGRAM, 'Altra prova')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "97945.49927927928"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def media_pesata(prezzi, pesi):\n",
+    "    return sum(p * v for p, v in zip(prezzi, pesi)) / sum(pesi)\n",
+    "\n",
+    "prezzi = [97945.82, 97945.22]\n",
+    "pesi = [9.3, 10.68]\n",
+    "media_pesata(prezzi, pesi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "99033.88163848623"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "media_pesata(prezzi, pesi) / 0.999 / 0.99"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "96975.74186067256"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "media_pesata(prezzi, pesi) / 1.01"
+   ]
   }
  ],
  "metadata": {
