--- a/API Bybit.ipynb
+++ b/API Bybit.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
     "    except Exception as e:\n",
     "        print(f\"Errore nell'invio del messaggio Telegram: {e}\")\n",
     "\n",
-    "# invia_messaggio_telegram(TOKEN, CHAT_ID, MESSAGGIO)"
+    "invia_messaggio_telegram(TOKEN_TELEGRAM, CHAT_ID_TELEGRAM, 'ciao di prova')"
    ]
   },
   {
