Generalizzazione calcolo rendimento ideale + aggiornamenti

--- a/Grid search generica.ipynb
+++ b/Grid search generica.ipynb
@@ -340,8 +340,8 @@
     "    dp = [[0] * 2 for _ in range(n)]  # dp[i][0]: massimo rendimento senza bitcoin, dp[i][1]: massimo rendimento con bitcoin\n",
     "\n",
     "    # Stato iniziale\n",
-    "    dp[0][0] = capitale_iniziale  # Solo liquidità\n",
-    "    dp[0][1] = bitcoin_iniziali * colonna_prezzi.iloc[0]  # Solo valore dei bitcoin posseduti\n",
+    "    dp[0][0] = capitale_iniziale  # Liquidità posseduta\n",
+    "    dp[0][1] = bitcoin_iniziali # Quantità bitcoin posseduti\n",
     "\n",
     "    for i in range(1, n):\n",
     "        prezzo_corrente = colonna_prezzi.iloc[i]\n",
