Aggiunte approssimazioni exchange a strategia 8 del doppio TS + aggiornamenti vari

--- a/Rotazione di breve tra più crypto.ipynb
+++ b/Rotazione di breve tra più crypto.ipynb
@@ -334,42 +334,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[np.float64(14.520391452095458), np.float64(14520.391452095459)]"
+       "[np.float64(7.94062532752397), np.float64(7940.625327523971)]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "calcola_rendimento_portafoglio_ideale(crypto_data['BTC/USDT']['close'], 1000, 0, 0, 0, 0, 0)"
+    "calcola_rendimento_portafoglio_ideale(crypto_data['BTC/USDT']['close'], 1000, 0, 5, 5, 0.001, 0.001)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[np.float64(14.520391452095458), np.float64(14520.391452095459)]"
+       "[np.float64(25.020366067580856), np.float64(25020.366067580857)]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "calcola_rendimento_portafoglio_ideale_multicrypto([crypto_data['BTC/USDT']['close']], 1000, [0], 0, 0, 0, 0)"
+    "calcola_rendimento_portafoglio_ideale_multicrypto([crypto_data['BTC/USDT']['close'], crypto_data['ETH/USDT']['close']], 1000, [0, 0], 5, 5, 0.001, 0.001)"
    ]
   }
  ],
